# redesigned-spork

./: .coverage  =5.9.0  IMPROVEMENTS.md  INITIAL.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
PRPs/: dynamics-powerplatform-architecture-builder.md
PRPs/templates/: prp_base.md
docs/: README.md
src/: main.py  test_visio.vsdx
src/cli/: commands.py  prompts.py
src/data/: technologies.json
src/data/cache/metadata/: technology_catalog.json
src/data/templates/: Microsoft_Architecture.txt
src/dynamics_powerplatform_architecture_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: architecture.py  diagram.py  technology.py
src/services/: architecture_generator.py  cache_manager.py  diagram_exporter.py  icon_manager.py  selection_service.py  technology_catalog.py  visio_exporter.py
src/utils/: helpers.py  memory_optimizer.py  validators.py
tests/: conftest.py  test_main.py
tests/test_models/: test_technology.py
tests/test_services/: test_selection_service.py  test_technology_catalog.py
